--- a/vanilla-typeahead/index.html
+++ b/vanilla-typeahead/index.html
@@ -84,6 +84,45 @@
 </body>
 
 <script>
+//     const characters = [];
+//     const list = document.getElementById('list');
+//     fetch('https://www.swapi.co/api/people')
+//     .then(response => response.json())
+//     .then(response => {
+//       characters.push(...response.results);
+//       render();
+//     })
+
+// function render() {
+//   const html = characters.map(val => `<li>${val.name}</li>`).join('');
+//   list.innerHTML = html;
+// }
+
+const characters = [];
+const list = document.getElementById('list');
+const search = document.querySelector('input');
+
+fetch('https://www.swapi.co/api/people')
+    .then(response => response.json())
+    .then(response => characters.push(...response.results))
+
+function filterText() {
+    const filtered = characters
+        .filter(val => val.name.toLowerCase().includes(this.value.toLowerCase()))
+        .map(val => `<li>${val.name}</li>`)
+
+    if (filtered.length) {
+        render(filtered)
+    }
+}
+
+function render(array) {
+    const html = array.join('');
+    list.innerHTML = html;
+}
+
+search.addEventListener('keyup', filterText);
+
 </script>
 
 </html>
